manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    name: observability
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    name: microservices
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    name: security
